@@ -49,8 +49,6 @@ endif
 
 all::     $(EVENTSERVEXAMP_LIB) $(EVENTSERVEXAMP_EXE)
 
-$(EVENTSERVEXAMP_EXE): LDRPATHS += .
-
 $(EVENTSERVEXAMP_EXE): $(BUILDGO4LIBS) $(EVENTSERVEXAMP_EXEO) $(EVENTSERVEXAMP_LIB) 
 	$(LD) $(LDFLAGS) $(EVENTSERVEXAMP_EXEO) $(LIBS_FULLSET) $(EVENTSERVEXAMP_LIB) $(OutPutOpt) $(EVENTSERVEXAMP_EXE)
 	@echo "$@  done"      
