@@ -53,8 +53,6 @@ endif
 
 all::     $(EXAMP1STEP_LIB) $(EXAMP1STEP_EXE)
 
-$(EXAMP1STEP_EXE): LDRPATHS += .
-
 $(EXAMP1STEP_EXE): $(BUILDGO4LIBS) $(EXAMP1STEP_EXEO) $(EXAMP1STEP_LIB)
 	$(LD) $(LDFLAGS) $(EXAMP1STEP_EXEO) $(LIBS_FULLSET) $(EXAMP1STEP_LIB) $(OutPutOpt) $(EXAMP1STEP_EXE)
 	@echo "$@  done"
