@@ -59,8 +59,6 @@ endif
 
 all::  $(EXAMP2STEP_LIB) $(EXAMP2STEP_EXE)
 
-$(EXAMP2STEP_EXE): LDRPATHS += .
-
 $(EXAMP2STEP_EXE): $(BUILDGO4LIBS) $(EXAMP2STEP_EXEO) $(EXAMP2STEP_LIB)
 	$(LD) $(LDFLAGS) $(EXAMP2STEP_EXEO) $(LIBS_FULLSET) $(EXAMP2STEP_LIB) $(OutPutOpt) $(EXAMP2STEP_EXE)
 	@echo "$@  done"
