@@ -51,8 +51,6 @@ endif
 
 all::     $(EXAMPMESH_LIB) $(EXAMPMESH_EXE)
 
-$(EXAMPMESH_EXE): LDRPATHS += .
-
 $(EXAMPMESH_EXE):      $(BUILDGO4LIBS) $(EXAMPMESH_EXEO) $(EXAMPMESH_LIB)
 	$(LD) $(LDFLAGS) $(EXAMPMESH_EXEO) $(LIBS_FULLSET) $(EXAMPMESH_LIB) $(OutPutOpt) $(EXAMPMESH_EXE)
 	@echo "$@  done"
