@@ -53,8 +53,6 @@ endif
 
 all::  $(EXAMPSIMP_LIB) $(EXAMPSIMP_EXE)
 
-$(EXAMPSIMP_EXE): LDRPATHS += .
-
 $(EXAMPSIMP_EXE):   $(BUILDGO4LIBS) $(EXAMPSIMP_EXEO) $(EXAMPSIMP_LIB)
 	$(LD) $(LDFLAGS) $(EXAMPSIMP_EXEO) $(LIBS_FULLSET) $(EXAMPSIMP_LIB) $(OutPutOpt) $(EXAMPSIMP_EXE)
 	@echo "$@  done"
