@@ -52,8 +52,6 @@ endif
 
 all::  $(EXUSERSRC_LIB) $(EXUSERSRC_EXE)
 
-$(EXUSERSRC_EXE): LDRPATHS += .
-
 $(EXUSERSRC_EXE):      $(BUILDGO4LIBS) $(EXUSERSRC_EXEO) $(EXUSERSRC_LIB)
 	$(LD) $(LDFLAGS) $(EXUSERSRC_EXEO) $(LIBS_FULLSET) $(EXUSERSRC_LIB) $(OutPutOpt) $(EXUSERSRC_EXE)
 	@echo "$@  done"      
