@@ -54,8 +54,6 @@ endif
 
 all::   $(TASKHANDEXAMP_LIB) $(TASKHANDEXAMP_EXE1) $(TASKHANDEXAMP_EXE2)
 
-$(TASKHANDEXAMP_EXE1) $(TASKHANDEXAMP_EXE2): LDRPATHS += .
-
 $(TASKHANDEXAMP_EXE1):      $(BUILDGO4LIBS) $(TASKHANDEXAMP_EXE1O) $(TASKHANDEXAMP_LIB)
 	$(LD) $(LDFLAGS) $(TASKHANDEXAMP_EXE1O) $(LIBS_TASKHANDSET) $(TASKHANDEXAMP_LIB) $(OutPutOpt) $(TASKHANDEXAMP_EXE1)
 	@echo "$@  done"      
