@@ -50,8 +50,6 @@ endif
 
 all::     $(THRDMNGREXAMP_LIB) $(THRDMNGREXAMP_EXE)
 
-$(THRDMNGREXAMP_EXE): LDRPATHS += .
-
 $(THRDMNGREXAMP_EXE):     $(THRDMNGREXAMP_EXEO) $(THRDMNGREXAMP_LIB) 
 	$(LD) $(LDFLAGS) $(THRDMNGREXAMP_EXEO) $(LIBS_THRDMANSET) $(THRDMNGREXAMP_LIB) $(OutPutOpt) $(THRDMNGREXAMP_EXE)
 	@echo "$@  done"      
