@@ -14,8 +14,10 @@ ifndef GO4_OS
 GO4_OS = Linux
 endif
 
+GO4TOPPATH = $(CURDIR)
 GO4EXEPATH = $(CURDIR)/bin
 GO4LIBPATH = $(CURDIR)/lib
+GO4INCPATH = $(CURDIR)/include
 ifndef GO4WITHRPATH
 GO4WITHRPATH = true
 endif
@@ -141,8 +143,10 @@ $(GO4SYS)/build/Makefile.gener:
 	@echo "#### Generated file, not change ###" >> $@
 	@echo "GO4_Configured = true" >> $@
 	@echo "GO4_OS         = $(GO4_OS)" >> $@
+	@echo "GO4TOPPATH     = $(GO4TOPPATH)" >> $@
 	@echo "GO4EXEPATH     = $(GO4EXEPATH)" >> $@
 	@echo "GO4LIBPATH     = $(GO4LIBPATH)" >> $@
+	@echo "GO4INCPATH     = $(GO4INCPATH)" >> $@
 	@echo "GO4WITHRPATH   = $(GO4WITHRPATH)" >> $@
 	@echo "" >> $@
 	@echo "#### ROOT configigurations from root-config" >> $@
@@ -221,11 +225,11 @@ INCLUDES = -I$(GO4SYS)/include -I$(GO4SYS)
 endif
 
 #### Combine compilers flags in one variable: ###
-CXXFLAGS      =  $(OPTIONS) $(EXTRACXXOPTIONS) $(DEFINITIONS) $(ROOTCFLAGS) $(INCLUDES)
+CXXFLAGS  =  $(OPTIONS) $(EXTRACXXOPTIONS) $(DEFINITIONS) $(ROOTCFLAGS) $(INCLUDES)
 
-CFLAGS        = $(OPTIONS) $(EXTRACOPTIONS) $(DEFINITIONS) $(INCLUDES)
+CFLAGS    = $(OPTIONS) $(EXTRACOPTIONS) $(DEFINITIONS) $(INCLUDES)
 
-LDRPATHS += $(ROOTLIBPATH) $(GO4LIBPATH)
+LDRPATHS = $(ROOTLIBPATH) $(GO4LIBPATH) .
 
 
 #QT relevant variables
