@@ -21,6 +21,8 @@ GO4GUI3_DH          = $(GO4GUI3_DICT).$(HedSuf)
 GO4GUI3_DS          = $(GO4GUI3_DICT).$(SrcSuf)
 GO4GUI3_DO          = $(GO4GUI3_DICT).$(ObjSuf)
 
+$(GO4GUI3_DIR)/$(GO4GUI3_QTMAKE) : LDRPATHS := $(ROOTLIBPATH) $(GO4LIBPATH) $(if $(USEDIM), $(DIMLIBPATH),)
+
 GO4GUI3_QMAKEFLAGS = "QMAKE_LFLAGS += $(LDFLAGS_RPATH)" 
 
 ifdef USEDIM
@@ -28,7 +30,6 @@ GO4GUI3_FORMS       = $(wildcard $(GO4GUI3_DIR)/*.ui)
 GO4GUI3_FORMSI      = $(wildcard $(GO4GUI3_DIR)/*.ui.h)
 GO4GUI3_QMAKEFLAGS += "FORMS += TGo4DabcMonitor.ui" 
 GO4GUI3_QMAKEFLAGS += "INCLUDEPATH += $(DIMINCPATH)"
-$(GO4GUI3_DIR)/$(GO4GUI3_QTMAKE) : LDRPATHS += $(DIMLIBPATH)
 else
 GO4GUI3_FORMS       = $(filter-out $(GO4GUI3_DIR)/TGo4DabcMonitor.ui, $(wildcard $(GO4GUI3_DIR)/*.ui))
 GO4GUI3_FORMSI      = $(filter-out $(GO4GUI3_DIR)/TGo4DabcMonitor.ui.h, $(wildcard $(GO4GUI3_DIR)/*.ui.h))
