@@ -22,6 +22,8 @@ GO4GUI4_DH          = $(GO4GUI4_DICT).$(HedSuf)
 GO4GUI4_DS          = $(GO4GUI4_DICT).$(SrcSuf)
 GO4GUI4_DO          = $(GO4GUI4_DICT).$(ObjSuf)
 
+$(GO4GUI4_DIR)/$(GO4GUI4_QTMAKE) : LDRPATHS := $(ROOTLIBPATH) $(GO4LIBPATH) $(if $(USEDIM), $(DIMLIBPATH),)
+
 GO4GUI4_QMAKEFLAGS = "unix:QMAKE_LFLAGS += $(LDFLAGS_RPATH)" 
 
 ifdef USEDIM
@@ -30,7 +32,6 @@ GO4GUI4_QMAKEFLAGS += "FORMS += TGo4DabcMonitor.ui"
 GO4GUI4_QMAKEFLAGS += "HEADERS += TGo4DabcMonitor.h" 
 GO4GUI4_QMAKEFLAGS += "SOURCES += TGo4DabcMonitor.cpp" 
 GO4GUI4_QMAKEFLAGS += "INCLUDEPATH += $(DIMINCPATH)"
-$(GO4GUI4_DIR)/$(GO4GUI4_QTMAKE) : LDRPATHS += $(DIMLIBPATH)
 else
 GO4GUI4_FORMS       = $(filter-out $(GO4GUI4_DIR)/TGo4DabcMonitor.ui, $(wildcard $(GO4GUI4_DIR)/*.ui))
 endif
