@@ -30,6 +30,15 @@ Changes in Go4 v4.3.2 (September 09)
 4. ROOT/Qt/Go4 library paths directly specified in all go4 executables 
    (go4, user analysis). This speeds up start time and allows to run 
    gui and analysis without any login scripts.       
+5. Introduce standard go4analysis executable, which can be used to launch
+   any user analysis, loading it from the user (typically libGo4UserAnalysis) library. 
+   Minimum changes required - user should implement CreateUserAnalysis() function.
+   ExampleSimple, Example1Step, Example2Step adjusted to this scheme.  
+6. Introduced go4-config utility, which provide possibility to use go4 without setting
+   environment variables like GO4SYS or LD_LIBRARY_PATH. The only requirement is that
+   go4-config should be accessible via PATH variable or should be placed in one of 
+   the standard locations. Will be the main point to provide go4 install feature.
+
 
 Changes in Go4 v4.3.1 (August 09)
 1. Fix error with connecting DABC/MBS servers second time
